--- a/introduction-module-1/python_basics..ipynb
+++ b/introduction-module-1/python_basics..ipynb
@@ -1,16 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "8a18a12d",
-   "metadata": {},
-   "source": [
-    "Find the missing element in the list"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "2f7193b8",
    "metadata": {},
    "outputs": [
@@ -24,6 +16,54 @@
    ],
    "source": [
     "print(\"Hello world\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a5bac13c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age: 24\n",
+      "You are eligible for driving.\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = int(input(\"Enter your age: \"))\n",
+    "if age > 18:\n",
+    "    print(f\"Age: {age}\\nYou are eligible for driving.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87771a97",
+   "metadata": {},
+   "source": [
+    "Use semi-colone in python use for multiple code in single line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8eed22f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10; b = 30; sum = a + b \n",
+    "print(sum)"
    ]
   }
  ],
