--- a/introduction-module-1/variables.ipynb
+++ b/introduction-module-1/variables.ipynb
@@ -5,7 +5,7 @@
    "id": "71370c02",
    "metadata": {},
    "source": [
-    "## Variable"
+    "## Variable\n"
    ]
   },
   {
@@ -13,8 +13,9 @@
    "id": "4e11b0d6",
    "metadata": {},
    "source": [
-    "# Variables are the elements in python that can be used for stroing data into it or valeus into it or they can be referred as containers as well. \n",
-    "## varibales as per its name, data can vary that we are going to streo into it adn once we have decleard a variable we can vary the value stroed in it."
+    "# Variables are the elements in python that can be used for stroing data into it or valeus into it or they can be referred as containers as well.\n",
+    "\n",
+    "## varibales as per its name, data can vary that we are going to streo into it adn once we have decleard a variable we can vary the value stroed in it.\n"
    ]
   },
   {
@@ -24,16 +25,88 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# variable is age \n",
-    "age = 13 \n",
+    "# variable is age\n",
+    "age = 13\n",
     "# name also a variable it is a string value\n",
-    "name = \"soumya\"  \n",
+    "name = \"soumya\"\n",
     "\n",
-    "#streo the float value\n",
+    "# streo the float value\n",
     "hight = 8.2\n",
     "\n",
     "# streo boolean value\n",
     "is_true = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a24010c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ba9f6725",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "soumya\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "637d62ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "68d9ac22",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(is_true)"
    ]
   }
  ],
