--- a/introduction-module-1/variables.ipynb
+++ b/introduction-module-1/variables.ipynb
@@ -31,7 +31,9 @@
     "name = \"soumya\"\n",
     "\n",
     "# streo the float value\n",
-    "hight = 8.2\n",
+    "height = 8.2\n",
+    "\n",
+    "age = 23\n",
     "\n",
     "# streo boolean value\n",
     "is_true = True"
@@ -39,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a24010c5",
    "metadata": {},
    "outputs": [
@@ -47,11 +49,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13\n"
+      "14\n"
      ]
     }
    ],
    "source": [
+    "age=14\n",
     "print(age)"
    ]
   },
@@ -88,7 +91,7 @@
     }
    ],
    "source": [
-    "print(hight)"
+    "print(height)"
    ]
   },
   {
@@ -112,7 +115,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -126,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
